--- a/FullscreenScroll-main/package.json
+++ b/FullscreenScroll-main/package.json
@@ -16,7 +16,7 @@
   "keywords": [],
   "author": "Codrops",
   "license": "MIT",
-  "homepage": "https://tympanus.net/codrops",
+  "homepage": "http://www.sungdomsehomepages1.kro.kr",
   "bugs": {
     "url": "https://github.com/codrops/[NAME]/issues"
   },
