--- a/FullscreenScroll-main/package.json
+++ b/FullscreenScroll-main/package.json
@@ -4,9 +4,9 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "description": "",
   "scripts": {
-    "start": "parcel src/index.html --open",
+    "start": "FullscreenScroll-main/src/index.html --open",
     "clean": "rm -rf dist/*",
-    "build:parcel": "parcel build src/index.html --no-content-hash --no-source-maps --public-url ./",
+    "build:parcel": "parcel build FullscreenScroll-main/src/index.html --no-content-hash --no-source-maps --public-url ./",
     "build": "npm run clean && npm run build:parcel"
   },
   "repository": {
